Remove impact section e reordena carousel para fluxo de uso (login -> menu -> controle)

--- a/index.html
+++ b/index.html
@@ -312,59 +312,59 @@ ias<!DOCTYPE html>
                                 <div class="project-carousel">
                                     <div class="carousel-container">
                                         <div class="carousel-slide active">
-                                            <img src="assets/images/wacs/Tela Inicial.jpeg" alt="Tela Inicial do App WACS" class="carousel-image">
-                                            <div class="carousel-caption">
-                                                <h4>Tela Inicial</h4>
-                                                <p>Interface principal com visão geral do sistema e controles rápidos</p>
-                                            </div>
-                                        </div>
-                                        <div class="carousel-slide">
                                             <img src="assets/images/wacs/Tela de Login.jpeg" alt="Tela de Login do App WACS" class="carousel-image">
                                             <div class="carousel-caption">
                                                 <h4>Autenticação Segura</h4>
-                                                <p>Login seguro com validação de credenciais e recuperação de senha</p>
+                                                <p>Login seguro com validação de credenciais</p>
+                                            </div>
+                                        </div>
+                                        <div class="carousel-slide">
+                                            <img src="assets/images/wacs/Tela Inicial.jpeg" alt="Tela Inicial do App WACS" class="carousel-image">
+                                            <div class="carousel-caption">
+                                                <h4>Tela Inicial</h4>
+                                                <p>Interface principal com visão geral do sistema</p>
                                             </div>
                                         </div>
                                         <div class="carousel-slide">
                                             <img src="assets/images/wacs/Tela de Controle.jpeg" alt="Tela de Controle do App WACS" class="carousel-image">
                                             <div class="carousel-caption">
                                                 <h4>Controle em Tempo Real</h4>
-                                                <p>Interface intuitiva para controle remoto de dispositivos IoT</p>
+                                                <p>Interface para controle de dispositivos</p>
                                             </div>
                                         </div>
                                         <div class="carousel-slide">
                                             <img src="assets/images/wacs/Tela de Controle em modo de Segurança.jpeg" alt="Modo de Segurança do App WACS" class="carousel-image">
                                             <div class="carousel-caption">
                                                 <h4>Modo de Segurança</h4>
-                                                <p>Controles especiais para situações de emergência e segurança</p>
+                                                <p>Controles especiais para situações de emergência</p>
                                             </div>
                                         </div>
                                         <div class="carousel-slide">
                                             <img src="assets/images/wacs/Tela da Lista de Locais.jpeg" alt="Lista de Locais do App WACS" class="carousel-image">
                                             <div class="carousel-caption">
                                                 <h4>Gestão de Locais</h4>
-                                                <p>Organização e gerenciamento de múltiplos locais e dispositivos</p>
+                                                <p>Gerenciamento de múltiplos locais</p>
                                             </div>
                                         </div>
                                         <div class="carousel-slide">
                                             <img src="assets/images/wacs/Tela de Perfil.jpeg" alt="Perfil do Usuário do App WACS" class="carousel-image">
                                             <div class="carousel-caption">
                                                 <h4>Perfil do Usuário</h4>
-                                                <p>Gerenciamento de conta, configurações e preferências pessoais</p>
+                                                <p>Gerenciamento de configurações pessoais</p>
                                             </div>
                                         </div>
                                         <div class="carousel-slide">
                                             <img src="assets/images/wacs/Tela de Conexao.png" alt="Configuração de Conexão do App WACS" class="carousel-image">
                                             <div class="carousel-caption">
                                                 <h4>Configuração de Conexão</h4>
-                                                <p>Setup e configuração de dispositivos IoT na rede</p>
+                                                <p>Setup de dispositivos IoT na rede</p>
                                             </div>
                                         </div>
                                         <div class="carousel-slide">
                                             <img src="assets/images/wacs/kit_wacs.png" alt="Kit WACS Completo" class="carousel-image">
                                             <div class="carousel-caption">
                                                 <h4>Kit WACS Completo</h4>
-                                                <p>Solução IoT integrada com hardware e software para controle inteligente</p>
+                                                <p>Solução IoT integrada com hardware</p>
                                             </div>
                                         </div>
                                     </div>
@@ -386,33 +386,6 @@ ias<!DOCTYPE html>
                             </div>
                             <div class="phone-home-indicator"></div>
                         </div>
-                    </div>
-                </div>
-            </div>
-
-            <!-- Project Impact Section -->
-            <div class="project-impact animate-slide-in-up animate-delay-4">
-                <div class="impact-grid">
-                    <div class="impact-card">
-                        <div class="impact-icon">
-                            <i class="fas fa-users"></i>
-                        </div>
-                        <h4>Impacto Social</h4>
-                        <p>Promovendo independência e qualidade de vida para pessoas com deficiência motora através da tecnologia assistiva.</p>
-                    </div>
-                    <div class="impact-card">
-                        <div class="impact-icon">
-                            <i class="fas fa-brain"></i>
-                        </div>
-                        <h4>Inovação Tecnológica</h4>
-                        <p>Combinação de IA, IoT e processamento de voz para criar soluções inteligentes e acessíveis.</p>
-                    </div>
-                    <div class="impact-card">
-                        <div class="impact-icon">
-                            <i class="fas fa-trophy"></i>
-                        </div>
-                        <h4>Reconhecimento Nacional</h4>
-                        <p>Premiado na FETEPS Premium e reconhecido por instituições governamentais e educacionais.</p>
                     </div>
                 </div>
             </div>
