Trocar botões por Site Oficial (www.appwacs.com.br) e Instagram (@wacs_etec) com ícones

--- a/index.html
+++ b/index.html
@@ -297,8 +297,14 @@ ias<!DOCTYPE html>
                             </div>
                         </div>
                         <div class="featured-links">
-                            <a href="#reconhecimentos" class="btn btn-primary">Ver Todos os Prêmios</a>
-                            <a href="https://feteps.cps.sp.gov.br/projetos/wacs-autonomia-inteligente-para-pcds/" class="btn btn-secondary" target="_blank">Site Oficial FETEPS</a>
+                            <a href="https://www.appwacs.com.br" class="btn btn-primary" target="_blank">
+                                <i class="fas fa-globe"></i>
+                                Site Oficial
+                            </a>
+                            <a href="https://instagram.com/wacs_etec" class="btn btn-secondary" target="_blank">
+                                <i class="fab fa-instagram"></i>
+                                @wacs_etec
+                            </a>
                         </div>
                     </div>
                     <div class="featured-project-visual">
