Atualizar tecnologias do projeto WACS: Python, Arduino, IoT, IA, React Native, TypeScript, Node, Firebase

--- a/index.html
+++ b/index.html
@@ -284,8 +284,10 @@ ias<!DOCTYPE html>
                             <span>Arduino</span>
                             <span>IoT</span>
                             <span>Inteligência Artificial</span>
-                            <span>TensorFlow</span>
-                            <span>Processamento de Voz</span>
+                            <span>React Native</span>
+                            <span>TypeScript</span>
+                            <span>Node</span>
+                            <span>Firebase</span>
                         </div>
                         <div class="featured-award">
                             <div class="award-badge">
