Atualizar prêmio FETEPS para 7º LUGAR (2025) com descrição da maior feira de tecnologia pública da América Latina

--- a/index.html
+++ b/index.html
@@ -293,8 +293,8 @@ ias<!DOCTYPE html>
                             <div class="award-badge">
                                 <i class="fas fa-medal"></i>
                                 <div class="award-text">
-                                    <h4>🏆 FETEPS Premium Award</h4>
-                                    <p>Selecionado para a categoria premium da maior feira de tecnologia do SENAI-SP</p>
+                                    <h4>🏆 7º LUGAR - FETEPS (2025)</h4>
+                                    <p>A maior feira de tecnologia pública da América Latina, reunindo inovações e projetos transformadores do Brasil</p>
                                 </div>
                             </div>
                         </div>
