Atualizar seção Sobre com novo texto profissional e experiências

--- a/index.html
+++ b/index.html
@@ -124,13 +124,16 @@ ias<!DOCTYPE html>
             <div class="about-content">
                 <div class="about-text animate-slide-in-left animate-delay-2">
                     <p>
-                        Sou um desenvolvedor FullStack Junior apaixonado por tecnologia e por criar experiências digitais que fazem diferença. Com experiência em desenvolvimento de aplicações web modernas, tenho expertise tanto em frontend quanto em backend.
+                        Sou Desenvolvedor de Software formado em Desenvolvimento de Sistemas pela ETEC, com experiência prática em criação de aplicações web e mobile, integração com bancos de dados e desenvolvimento de soluções focadas em impacto real.
                     </p>
                     <p>
-                        Meu foco está em escrever código limpo, escalável e bem documentado. Estou sempre aprendendo novas tecnologias e melhores práticas da indústria para oferecer soluções de qualidade.
+                        Participei do desenvolvimento do projeto WACS (Wheelchair Automation Control System), uma cadeira de rodas automatizada controlada por aplicativo, reconhecida por seu caráter social e tecnológico. Esse projeto consolidou minha visão sobre como a tecnologia pode transformar vidas.
                     </p>
                     <p>
-                        Quando não estou codando, estou explorando novas frameworks, contribuindo em projetos open source ou aprendendo sobre arquitetura de software.
+                        Tenho experiência com JavaScript, TypeScript, React Native, HTML, CSS, SQL, Firebase, Git/GitHub e Python, atuando tanto no front-end quanto no back-end. Sou um profissional versátil, com facilidade para aprender novas tecnologias e me adaptar a diferentes desafios.
+                    </p>
+                    <p>
+                        Busco constantemente evoluir como desenvolvedor, criando soluções eficientes, escaláveis e bem estruturadas. Meu objetivo é atuar em projetos inovadores, contribuir com equipes de alto nível e gerar impacto positivo por meio da tecnologia.
                     </p>
                 </div>
                 <div class="about-stats animate-slide-in-right animate-delay-3">
