Área de Contato

--- a/index.html
+++ b/index.html
@@ -150,44 +150,51 @@ ias<!DOCTYPE html>
             <div class="skills-grid">
                 <div class="skill-category animate-slide-in-left animate-delay-2">
                     <div class="skill-header">
-                        <i class="fas fa-code"></i>
-                        <h3>Frontend</h3>
+                        <i class="fas fa-laptop-code"></i>
+                        <h3>💻 Front-end</h3>
                     </div>
+                    <p class="skill-category-label">Tecnologias</p>
                     <div class="skill-list">
                         <span class="skill-tag animate-bounce-in animate-delay-3" data-skill="html5">HTML5</span>
                         <span class="skill-tag animate-bounce-in animate-delay-4" data-skill="css3">CSS3</span>
                         <span class="skill-tag animate-bounce-in animate-delay-5" data-skill="javascript">JavaScript</span>
-                        <span class="skill-tag animate-bounce-in animate-delay-6" data-skill="react">React</span>
-                        <span class="skill-tag animate-bounce-in animate-delay-1" data-skill="vue">Vue.js</span>
-                        <span class="skill-tag animate-bounce-in animate-delay-2" data-skill="responsive">Responsive Design</span>
+                        <span class="skill-tag animate-bounce-in animate-delay-6" data-skill="typescript">TypeScript</span>
+                        <span class="skill-tag animate-bounce-in animate-delay-1" data-skill="react-native">React Native</span>
+                        <span class="skill-tag animate-bounce-in animate-delay-2" data-skill="figma">UI/UX (Figma)</span>
+                        <span class="skill-tag animate-bounce-in animate-delay-3" data-skill="responsive">Responsive Design</span>
                     </div>
                 </div>
                 <div class="skill-category animate-slide-in-up animate-delay-3">
                     <div class="skill-header">
-                        <i class="fas fa-server"></i>
-                        <h3>Backend</h3>
+                        <i class="fas fa-cogs"></i>
+                        <h3>⚙️ Back-end</h3>
                     </div>
+                    <p class="skill-category-label">Tecnologias</p>
                     <div class="skill-list">
                         <span class="skill-tag animate-bounce-in animate-delay-4" data-skill="nodejs">Node.js</span>
-                        <span class="skill-tag animate-bounce-in animate-delay-5" data-skill="express">Express</span>
-                        <span class="skill-tag animate-bounce-in animate-delay-6" data-skill="python">Python</span>
-                        <span class="skill-tag animate-bounce-in animate-delay-1" data-skill="api">REST API</span>
-                        <span class="skill-tag animate-bounce-in animate-delay-2" data-skill="sql">SQL</span>
-                        <span class="skill-tag animate-bounce-in animate-delay-3" data-skill="mongodb">MongoDB</span>
+                        <span class="skill-tag animate-bounce-in animate-delay-5" data-skill="python">Python</span>
+                        <span class="skill-tag animate-bounce-in animate-delay-6" data-skill="sql">SQL (MySQL)</span>
+                        <span class="skill-tag animate-bounce-in animate-delay-1" data-skill="firebase">Firebase</span>
+                        <span class="skill-tag animate-bounce-in animate-delay-2" data-skill="api">APIs REST</span>
+                        <span class="skill-tag animate-bounce-in animate-delay-3" data-skill="auth">Autenticação</span>
+                        <span class="skill-tag animate-bounce-in animate-delay-4" data-skill="database">Banco de Dados</span>
                     </div>
                 </div>
                 <div class="skill-category animate-slide-in-right animate-delay-4">
                     <div class="skill-header">
                         <i class="fas fa-tools"></i>
-                        <h3>Ferramentas & Outros</h3>
+                        <h3>🛠️ Outros</h3>
                     </div>
+                    <p class="skill-category-label">Tecnologias</p>
                     <div class="skill-list">
-                        <span class="skill-tag animate-bounce-in animate-delay-5" data-skill="git">Git</span>
-                        <span class="skill-tag animate-bounce-in animate-delay-6" data-skill="github">GitHub</span>
-                        <span class="skill-tag animate-bounce-in animate-delay-1" data-skill="docker">Docker</span>
-                        <span class="skill-tag animate-bounce-in animate-delay-2" data-skill="aws">AWS</span>
-                        <span class="skill-tag animate-bounce-in animate-delay-3" data-skill="figma">Figma</span>
-                        <span class="skill-tag animate-bounce-in animate-delay-4" data-skill="scrum">Scrum</span>
+                        <span class="skill-tag animate-bounce-in animate-delay-5" data-skill="git">Git / GitHub</span>
+                        <span class="skill-tag animate-bounce-in animate-delay-6" data-skill="os">Windows / Linux / Android</span>
+                        <span class="skill-tag animate-bounce-in animate-delay-1" data-skill="arduino">Arduino / IoT</span>
+                        <span class="skill-tag animate-bounce-in animate-delay-2" data-skill="maps">Google Maps API</span>
+                        <span class="skill-tag animate-bounce-in animate-delay-3" data-skill="postman">Postman</span>
+                        <span class="skill-tag animate-bounce-in animate-delay-4" data-skill="expo">Expo</span>
+                        <span class="skill-tag animate-bounce-in animate-delay-5" data-skill="android-studio">Android Studio</span>
+                        <span class="skill-tag animate-bounce-in animate-delay-6" data-skill="json">JSON / Integrações</span>
                     </div>
                 </div>
             </div>
@@ -207,20 +214,32 @@ ias<!DOCTYPE html>
                         <i class="fas fa-code"></i>
                     </div>
                     <div class="certification-content">
-                        <h3>Desenvolvimento Web FullStack</h3>
-                        <p class="certification-issuer">Centro Paula Souza</p>
-                        <p class="certification-date">2023</p>
+                        <h3>Técnico em Desenvolvimento de Sistemas</h3>
+                        <p class="certification-issuer">ETEC de Registro</p>
+                        <p class="certification-date">2023 - 2025</p>
                         <span class="certification-badge">Técnico</span>
                     </div>
                 </div>
 
                 <div class="certification-card">
                     <div class="certification-icon">
-                        <i class="fab fa-aws"></i>
+                        <i class="fas fa-shield-alt"></i>
                     </div>
                     <div class="certification-content">
-                        <h3>AWS Cloud Practitioner</h3>
-                        <p class="certification-issuer">Amazon Web Services</p>
+                        <h3>Cisco Network Defense</h3>
+                        <p class="certification-issuer">Cisco Networking Academy</p>
+                        <p class="certification-date">2025</p>
+                        <span class="certification-badge">Certificado</span>
+                    </div>
+                </div>
+
+                <div class="certification-card">
+                    <div class="certification-icon">
+                        <i class="fas fa-shield-alt"></i>
+                    </div>
+                    <div class="certification-content">
+                        <h3>Cisco Ethical Hacking Essentials</h3>
+                        <p class="certification-issuer">Cisco Networking Academy</p>
                         <p class="certification-date">2024</p>
                         <span class="certification-badge">Certificado</span>
                     </div>
@@ -228,25 +247,25 @@ ias<!DOCTYPE html>
 
                 <div class="certification-card">
                     <div class="certification-icon">
-                        <i class="fab fa-react"></i>
+                        <i class="fas fa-gamepad"></i>
                     </div>
                     <div class="certification-content">
-                        <h3>React Developer Certification</h3>
-                        <p class="certification-issuer">Meta (Facebook)</p>
-                        <p class="certification-date">2024</p>
-                        <span class="certification-badge">Profissional</span>
+                        <h3>Desenvolvimento de Games FullStack</h3>
+                        <p class="certification-issuer">Danki Code</p>
+                        <p class="certification-date">2023</p>
+                        <span class="certification-badge">Certificado</span>
                     </div>
                 </div>
 
                 <div class="certification-card">
                     <div class="certification-icon">
-                        <i class="fas fa-database"></i>
+                        <i class="fas fa-briefcase"></i>
                     </div>
                     <div class="certification-content">
-                        <h3>MongoDB Certified Developer</h3>
-                        <p class="certification-issuer">MongoDB Inc.</p>
+                        <h3>Oficina "Partiu Mercado"</h3>
+                        <p class="certification-issuer">Sebrae-SP</p>
                         <p class="certification-date">2023</p>
-                        <span class="certification-badge">Associate</span>
+                        <span class="certification-badge">Workshop</span>
                     </div>
                 </div>
             </div>
@@ -681,55 +700,41 @@ ias<!DOCTYPE html>
     <!-- Contato -->
     <section id="contato" class="contact">
         <div class="container">
-            <div class="section-header">
-                <h2>Vamos Conversar?</h2>
-                <div class="line"></div>
+            <div class="section-header animate-slide-in-up">
+                <h2>Contato</h2>
+                <div class="line animate-scale-in animate-delay-1"></div>
+                <p class="section-subtitle animate-slide-in-up animate-delay-2">Vamos conversar e criar algo incrível juntos</p>
             </div>
-            <div class="contact-content">
-                <p class="contact-text">Estou sempre aberto a novas oportunidades, projetos interessantes e colaborações. Sinta-se à vontade para entrar em contato!</p>
-
-                <!-- Contact Form -->
-                <form id="contactForm" class="contact-form">
-                    <div class="form-group">
-                        <label for="name">Nome *</label>
-                        <input type="text" id="name" name="name" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="email">Email *</label>
-                        <input type="email" id="email" name="email" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="subject">Assunto *</label>
-                        <input type="text" id="subject" name="subject" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="message">Mensagem *</label>
-                        <textarea id="message" name="message" rows="5" required></textarea>
-                    </div>
-                    <button type="submit" class="btn btn-primary" id="submitBtn">
-                        <span id="btnText">Enviar Mensagem</span>
-                        <i class="fas fa-paper-plane" id="btnIcon"></i>
-                    </button>
-                    <div id="formMessage" class="form-message"></div>
-                </form>
-
+            <div class="contact-content animate-slide-in-up animate-delay-3">
                 <!-- Social Links -->
                 <div class="contact-links">
-                    <a href="mailto:victor@example.com" class="contact-btn">
-                        <i class="fas fa-envelope"></i>
-                        <span>Email</span>
+                    <a href="https://wa.me/5513996016551" class="contact-btn contact-btn-whatsapp animate-bounce-in animate-delay-4" target="_blank">
+                        <i class="fab fa-whatsapp"></i>
+                        <div class="contact-info">
+                            <h4>WhatsApp</h4>
+                            <p>+55 13 99601-6551</p>
+                        </div>
                     </a>
-                    <a href="https://github.com/vftheodoro" class="contact-btn" target="_blank">
+                    <a href="https://github.com/vftheodoro" class="contact-btn contact-btn-github animate-bounce-in animate-delay-5" target="_blank">
                         <i class="fab fa-github"></i>
-                        <span>GitHub</span>
+                        <div class="contact-info">
+                            <h4>GitHub</h4>
+                            <p>vftheodoro</p>
+                        </div>
                     </a>
-                    <a href="https://linktr.ee/vftheodoro" class="contact-btn" target="_blank">
-                        <i class="fas fa-link"></i>
-                        <span>Linktree</span>
+                    <a href="https://linkedin.com/in/vftheodoro" class="contact-btn contact-btn-linkedin animate-bounce-in animate-delay-6" target="_blank">
+                        <i class="fab fa-linkedin"></i>
+                        <div class="contact-info">
+                            <h4>LinkedIn</h4>
+                            <p>vftheodoro</p>
+                        </div>
                     </a>
-                    <a href="https://www.instagram.com/vftheodoro/" class="contact-btn" target="_blank">
+                    <a href="https://www.instagram.com/vftheodoro/" class="contact-btn contact-btn-instagram animate-bounce-in animate-delay-1" target="_blank">
                         <i class="fab fa-instagram"></i>
-                        <span>Instagram</span>
+                        <div class="contact-info">
+                            <h4>Instagram</h4>
+                            <p>@vftheodoro</p>
+                        </div>
                     </a>
                 </div>
             </div>
@@ -741,7 +746,6 @@ ias<!DOCTYPE html>
         <div class="container">
             <div class="footer-content">
                 <p>&copy; 2024 Victor Theodoro. Todos os direitos reservados.</p>
-                <p>Desenvolvido com <span class="heart"><i class="fas fa-heart"></i></span> em HTML, CSS e JavaScript</p>
             </div>
         </div>
     </footer>
