--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@ ias<!DOCTYPE html>
                     <li><a href="#skills">Skills</a></li>
                     <li><a href="#certificacoes">Certificações</a></li>
                     <li><a href="#projetos">Projetos</a></li>
+                    <li><a href="#midia">Mídia</a></li>
                     <li><a href="#contato">Contato</a></li>
                 </ul>
             </div>
